fix text overflow content width for list elements

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -88,6 +88,11 @@ li {
     margin-left: 20px;
 }
 
+li.main {
+    width: unset;
+    list-style-position: inside;
+}
+
 ul.full-page {
     margin-right: 20px;
 }
